[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/gui/LevelOver.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/fonts/black_slanted_L.tres" type="DynamicFont" id=2]
[ext_resource path="res://game/gui/FinalRankingLine.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/theme/home_theme.tres" type="Theme" id=6]

[node name="LevelOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 180.0 ],
"_edit_vertical_guides_": [ 320.0 ]
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 0.941176 )
margin_right = 640.0
margin_bottom = 360.0

[node name="Title" type="Label" parent="."]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -796.0
margin_top = 209.0
margin_right = 796.0
margin_bottom = 427.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "LEVEL FINISHED"
align = 1

[node name="Content" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -576.0
margin_top = -288.0
margin_right = 576.0
margin_bottom = 288.0

[node name="Results" type="VBoxContainer" parent="Content"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -136.0
margin_right = 320.0
margin_bottom = 136.0
custom_constants/separation = 8

[node name="Title" type="Label" parent="Content/Results"]
margin_left = 245.0
margin_right = 395.0
margin_bottom = 48.0
size_flags_horizontal = 4
text = "Results"

[node name="RankingLine" parent="Content/Results" instance=ExtResource( 4 )]
margin_left = 140.0
margin_top = 56.0
margin_right = 500.0
margin_bottom = 104.0

[node name="RankingLine2" parent="Content/Results" instance=ExtResource( 4 )]
margin_left = 140.0
margin_top = 112.0
margin_right = 500.0
margin_bottom = 160.0

[node name="RankingLine3" parent="Content/Results" instance=ExtResource( 4 )]
margin_left = 140.0
margin_top = 168.0
margin_right = 500.0
margin_bottom = 216.0

[node name="RankingLine4" parent="Content/Results" instance=ExtResource( 4 )]
margin_left = 140.0
margin_top = 224.0
margin_right = 500.0
margin_bottom = 272.0

[node name="Menu" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -347.5
margin_top = -266.0
margin_right = 347.5
margin_bottom = -218.0
grow_horizontal = 2
size_flags_horizontal = 4
custom_constants/separation = 64

[node name="QuitBtn" type="Button" parent="Menu"]
margin_right = 521.0
margin_bottom = 58.0
mouse_default_cursor_shape = 2
size_flags_vertical = 8
text = "QUIT TO MAIN MENU"

[node name="ContinueBtn" type="Button" parent="Menu"]
margin_left = 585.0
margin_right = 860.0
margin_bottom = 58.0
mouse_default_cursor_shape = 2
size_flags_vertical = 8
text = "CONTINUE"

[node name="QuitGameBtn" type="Button" parent="Menu"]
visible = false
margin_left = 188.0
margin_right = 244.0
margin_bottom = 13.0
mouse_default_cursor_shape = 2
size_flags_vertical = 8
text = "QUIT GAME"

[connection signal="pressed" from="Menu/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="Menu/ContinueBtn" to="." method="_on_ContinueBtn_pressed"]
[connection signal="pressed" from="Menu/QuitGameBtn" to="." method="_on_QuitGameBtn_pressed"]
